fix(grid): set zero pixels for grid-gap

--- a/test-grid.css
+++ b/test-grid.css
@@ -29,7 +29,7 @@
 	display: grid;
 	grid-template-columns: repeat(var(--gridSize), 1fr);
 	grid-template-rows: repeat(var(--gridSize), 1fr);
-	grid-gap: 5px;
+	grid-gap: 0px;
 	border: 1px solid grey;
 	width: 800px;
 	height: 800px;
